# VSA

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  VISION_SEMANTIC_ARCHIVE_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
core/: __init__.py  cli.py  compatibility.py  config.py  container.py  db.py  exceptions.py  indexer.py  logging_config.py  model_downloader.py  models.py  search.py  vision.py
docs/plans/: 2026-04-22-audit-bugfix-changelog.md  2026-04-22-audit-v2-fixes.md  2026-04-22-project-audit.md  2026-04-22-vsa-stage1-architecture.md  2026-04-22-vsa-stage2-vision-inference.md  2026-04-22-vsa-stage3-indexer-ollama.md  2026-04-22-vsa-stage4-search-ui.md  2026-04-22-vsa-stage5-settings-status-modeldownloader.md  2026-04-22-vsa-stage6-compatibility-checklist.md
docs/reports/: 2026-04-22-audit-v2-changelog.md  2026-04-22-audit-v2-documentation-update.md  2026-04-22-audit-v2-guardian-verdict.md  2026-04-22-audit-v2-test-report.md  2026-04-22-vsa-stage1-changelog.md  2026-04-22-vsa-stage1-documentation-update.md  2026-04-22-vsa-stage1-guardian-verdict.md  2026-04-22-vsa-stage1-test-report.md  2026-04-22-vsa-stage2-changelog.md  2026-04-22-vsa-stage2-documentation-update.md  2026-04-22-vsa-stage2-guardian-verdict.md  2026-04-22-vsa-stage2-test-report.md  2026-04-22-vsa-stage3-changelog.md  2026-04-22-vsa-stage3-documentation-update.md  2026-04-22-vsa-stage3-guardian-verdict.md  2026-04-22-vsa-stage3-test-report.md  2026-04-22-vsa-stage4-changelog.md  2026-04-22-vsa-stage4-documentation-update.md  2026-04-22-vsa-stage4-guardian-verdict.md  2026-04-22-vsa-stage4-test-report.md  2026-04-22-vsa-stage5-changelog.md  2026-04-22-vsa-stage5-documentation-update.md  2026-04-22-vsa-stage5-guardian-verdict.md  2026-04-22-vsa-stage5-test-report.md  2026-04-22-vsa-stage6-changelog.md  (+7 more)
tests/: conftest.py  test_config.py  test_db_dedup.py  test_fts_sanitizer.py  test_indexer_async.py  test_model_downloader.py  test_search_rerank.py
(+4 files in other folders)
