[project]
name = "vision-semantic-archive"
version = "0.1.0"
description = "Hybrid visual semantic archive with CLIP, faces and FTS."
requires-python = ">=3.11,<3.12"
dependencies = [
  "streamlit",
  "pydantic>=2",
  "httpx",
  "chromadb",
  "open_clip_torch",
  "insightface",
  "onnxruntime-gpu",
  "torch",
  "opencv-python",
  "numpy",
  "Pillow",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
